# swagger_server/swagger/swagger.yaml
@@ -21,11 +21,11 @@ tags:
   externalDocs:
     description: Find out more about hello
     url: http://localhost/hello
-- name: xxx
-  description: xxx
+- name: chat_gpt
+  description: Chat GPT API
   externalDocs:
-    description: xxx
-    url: http://localhost/xxx
+    description: chat_gpt
+    url: http://localhost/chat_gpt
 paths:
   /hello:
     get:
@@ -60,53 +60,27 @@ paths:
           description: Not found
           content: {}
       x-openapi-router-controller: swagger_server.controllers.hello_controller
-  /xxx:
-    get:
-      tags:
-      - xxx
-      summary: xxx
-      description: xxx
-      operationId: get_xxx
-      parameters:
-      - name: xxx
-        in: query
-        description: xxx
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: string
-      responses:
-        "200":
-          description: Successful operation
-          content: {}
-        "400":
-          description: Invalid parameters
-          content: {}
-        "404":
-          description: Not found
-          content: {}
-      x-openapi-router-controller: swagger_server.controllers.xxx_controller
+  /chat_gpt:
     post:
       tags:
-      - xxx
-      summary: xxx
-      operationId: post_xxx
+      - chat_gpt
+      summary: chat_gpt
+      operationId: post_chat_gpt
       requestBody:
-        description: xxx
+        description: chat_gpt
         content:
           '*/*':
             schema:
               type: array
               items:
-                $ref: '#/components/schemas/Xxx'
+                $ref: '#/components/schemas/ChatGpt'
         required: true
       responses:
         default:
           description: Successful operation
           content: {}
       x-codegen-request-body-name: body
-      x-openapi-router-controller: swagger_server.controllers.xxx_controller
+      x-openapi-router-controller: swagger_server.controllers.chat_gpt_controller
 components:
   schemas:
     Hello:
@@ -119,16 +93,18 @@ components:
         result: "Hello, {your_name}"
       xml:
         name: Hello
-    Xxx:
+    ChatGpt:
       type: object
       properties:
         id:
           type: integer
           format: int64
-        xxx:
+        role:
+          type: string
+        content:
           type: string
       xml:
-        name: Xxx
+        name: ChatGpt
   securitySchemes:
     petstore_auth:
       type: oauth2
